Code to fix spacing between line-blocks

--- a/docs/source/.static/custom.css
+++ b/docs/source/.static/custom.css
@@ -12,3 +12,7 @@
 .wy-table-responsive td div {
     line-height: 10pt;
 }
+
+.wy-table-responsive table div.line-block {
+    margin-bottom: 0;
+}
